--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
+    "@prisma/client": "^5.19.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -17,6 +19,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "nextjs-toploader": "^3.6.15",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
